--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Adding config.py file.
+config.py 
+
+# Adding additional files. 
+API_practice.ipynb
+Practice2.ipynb
+random_numbers.ipynb
+WeatherPy-different_coords.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
